[package]
name = "neuroquery_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.16.0"
ndarray-npy = "0.9.1"
zip = { version = "2.2.0", default-features = false }
wasm-bindgen = "0.2.95"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [ "console" ] }
lazy_static = "1.5.0"

[lib]
name = "neuroquery"
crate-type = ["cdylib"]
